fixes horizontal scroll

--- a/src/components/Text1/Text1.css
+++ b/src/components/Text1/Text1.css
@@ -8,7 +8,7 @@ section.text-1 {
 .text-1-paragraph-container {
     padding-right: 1rem;
     max-width: 350px;
-    margin-right: 4rem;
+    margin-right: 2rem;
     position: relative;
     top: -50px;
     font-size: 1.2rem;
@@ -32,7 +32,7 @@ section.text-1 {
 .phone-image-container img {
     position: relative;
     top: -50px;
-    transform: scale(1.3) translateX(60px);
+    transform:  translateX(60px);
     z-index: 5;
 }
 
